k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: git-node
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: git-node
  template:
    metadata:
      labels:
        app: git-node
    spec:
      containers:
      - name: gitnode-container
        image: yduretti/gitnode:latest # Ensure this matches your Docker image
        ports:
          - containerPort: 3000      
        imagePullPolicy: Always
