k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: git-node-service
  namespace: production
spec:
  type: NodePort
  selector:
    app: git-node
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30036
